[gd_scene load_steps=9 format=2]

[ext_resource path="res://Images/TheVoidCore/newwhitespinner.png" type="Texture" id=1]
[ext_resource path="res://Images/Floors/tile.png" type="Texture" id=2]
[ext_resource path="res://Scripts/TheVoidCore.gd" type="Script" id=3]
[ext_resource path="res://Images/TheVoidCore/theshadow.png" type="Texture" id=4]
[ext_resource path="res://Images/TheVoidCore/thecircle.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 70.2136, 6.5658 )

[sub_resource type="Animation" id=2]
resource_name = "Idle"
length = 3.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Body/TheBall/WhiteSpinner/Sprite1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2, 2.2, 2.4, 2.6, 2.8, 3, 3.2, 3.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 0, 1, 2, 3, 4, 5, 0, 1, 2, 3, 4, 5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body/TheBall:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -150, -450 ), Vector2( -150, -423 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Body/TheShadow:scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.75, 0.75 ), Vector2( 1.2175, 0.75 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Body/TheBall/WhiteSpinner/Sprite2:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2, 2.2, 2.4, 2.6, 2.8, 3, 3.2, 3.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 0, 1, 2, 3, 4, 5, 0, 1, 2, 3, 4, 5 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Body/TheBall/WhiteSpinner/Sprite3:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2, 2.2, 2.4, 2.6, 2.8, 3, 3.2, 3.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 0, 1, 2, 3, 4, 5, 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Body/TheBall/WhiteSpinner/Sprite1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body/TheBall:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -150, -450 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Body/TheShadow:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.75, 0.75 ) ]
}

[node name="TheVoidCore" type="Node2D"]
script = ExtResource( 3 )

[node name="Body" type="Node2D" parent="."]

[node name="Thetile" type="Sprite" parent="Body"]
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 2 )
centered = false

[node name="TheShadow" type="Sprite" parent="Body"]
position = Vector2( 147, -110 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 4 )

[node name="TheBall" type="Sprite" parent="Body"]
position = Vector2( -150, -450 )
scale = Vector2( 0.75, 0.75 )
z_index = 10
texture = ExtResource( 5 )
centered = false

[node name="Highlighter" type="Sprite" parent="Body/TheBall"]
position = Vector2( 400, 450 )
texture = ExtResource( 5 )

[node name="WhiteSpinner" type="Node2D" parent="Body/TheBall"]
position = Vector2( 200, 600 )
scale = Vector2( 1.33333, 1.33333 )

[node name="Sprite1" type="Sprite" parent="Body/TheBall/WhiteSpinner"]
position = Vector2( 148, -198 )
texture = ExtResource( 1 )
hframes = 6

[node name="Sprite2" type="Sprite" parent="Body/TheBall/WhiteSpinner"]
position = Vector2( 148, -198 )
rotation = 3.14159
texture = ExtResource( 1 )
hframes = 6
frame = 5

[node name="Sprite3" type="Sprite" parent="Body/TheBall/WhiteSpinner"]
position = Vector2( 148, -198 )
rotation = 4.18879
texture = ExtResource( 1 )
hframes = 6
frame = 5

[node name="StaticBody2D" type="StaticBody2D" parent="Body"]

[node name="southcol" type="CollisionShape2D" parent="Body/StaticBody2D"]
position = Vector2( 73, 119 )
rotation = 0.464258
shape = SubResource( 1 )

[node name="eastcol" type="CollisionShape2D" parent="Body/StaticBody2D"]
position = Vector2( 226, 120 )
rotation = -0.464258
shape = SubResource( 1 )

[node name="westcol" type="CollisionShape2D" parent="Body/StaticBody2D"]
position = Vector2( 71.5377, 32.0707 )
rotation = -0.464258
shape = SubResource( 1 )

[node name="northcol" type="CollisionShape2D" parent="Body/StaticBody2D"]
position = Vector2( 228, 32 )
rotation = 0.464258
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="Body"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Body/Area2D"]
polygon = PoolVector2Array( -12, -26, -101, -189, -45, -364, 145, -468, 352, -385, 395, -187, 314, -41, 300, 150, 150, 225, 0, 150 )

[node name="ScaleTween" type="Tween" parent="Body"]

[node name="PosTween" type="Tween" parent="Body"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/Idle = SubResource( 2 )
anims/RESET = SubResource( 3 )
